# openai-cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/openai/: openai.hpp
